[FINISHED #99117936] rememberMe functionality
- implemented rememberMe functionality
- cleaned the updated codes

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -35,6 +35,7 @@
 	<script src="lib/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
 	<script src="lib/ace-builds/src-min-noconflict/ace.js"></script>
 	<script src="lib/angular-ui-ace/ui-ace.js"></script>
+	<script src="lib/ngstorage/ngStorage.min.js"></script>
 
 	<!-- javascript new libs-->
 	<script src="js/xpsui.min.js"></script>
@@ -46,6 +47,7 @@
 	<!-- javascript shared libs -->
 	<script src="js/safeUrlEncoder.js"></script>
 	<script src="js/QueryFilter.js"></script>
+
 
 </head>
 <body ng-app="x-registries" ng-class="{'login-page': !security.currentUser.systemCredentials.login.loginName}">
