--- a/src/client/html/x-index.html
+++ b/src/client/html/x-index.html
@@ -32,6 +32,7 @@
 	<script src="lib/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
 	<script src="lib/ace-builds/src-min-noconflict/ace.js"></script>
 	<script src="lib/angular-ui-ace/ui-ace.js"></script>
+	<script src="lib/ngstorage/ngStorage.min.js"></script>
 
 	<!-- javascript new libs-->
 	<script src="js/xpsui.min.js"></script>
@@ -42,6 +43,7 @@
 
 	<!-- javascript shared libs -->
 	<script src="js/safeUrlEncoder.js"></script>
+
 
 </head>
 <body ng-app="x-registries" ng-class="{'login-page': !security.currentUser.systemCredentials.login.loginName}">
