--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -63,7 +63,7 @@
 		<ul>
 			<li ng-show="hasPermissions(['System User'])"><span class="text-block"
 				>{{security.currentUser.baseData.name}}&nbsp;{{security.currentUser.baseData.surName}}</span></li>
-				<li ng-show="hasPermissions(['System User'])"><img ng-src="{{security.currentUser.photoInfo.photo}}" width=auto height=40px align="middle" style="PADDING-TOP: 2px;PADDING-BOTTOM: 2px">
+				<li ng-show="hasPermissions(['System User'])"><img ng-src="{{security.currentUser.photoInfo.photo}}" width=auto height=40px align="middle">
 			
 			</li>
 			<li ng-show="!hasPermissions(['System User'])"><a href="#/help" target="_blank"><i class="icon-question-circle"></i></a></li>
