--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="" />
 	<meta name="description" content="" />
 	<meta name="copyright" content="" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0,user-scalable=no">
 
 	<link rel="stylesheet" href="css/x.css" />
 	<link rel="stylesheet" href="css/x-default.css" />
@@ -63,7 +63,7 @@
 		<ul>
 			<li ng-show="hasPermissions(['System User'])"><span class="text-block"
 				>{{security.currentUser.baseData.name}}&nbsp;{{security.currentUser.baseData.surName}}</span></li>
-				<li ng-show="hasPermissions(['System User'])"><div class="x-login-photo" ng-style="{'background-image': 'url(' + security.currentUser.photoInfo.photo + ')'}"></div>
+			<li ng-show="hasPermissions(['System User'])"><div class="x-login-photo" ng-style="{'background-image': 'url(' + security.currentUser.photoInfo.photo + ')'}"></div>
 			</li>
 			<li ng-show="!hasPermissions(['System User'])"><a href="#/help" target="_blank"><i class="icon-question-circle"></i></a></li>
 			<li ng-show="hasPermissions(['System User'])"><a href="#/help"><i class="icon-question-circle"></i></a></li>
